2012-12-10  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Build GObject DOM bindings as a separate library
        https://bugs.webkit.org/show_bug.cgi?id=104527

        Reviewed by Xan Lopez.

        * GNUmakefile.am: Link to libWebCoreDOM.la.

2012-12-10  Martin Robinson  <mrobinson@igalia.com>

        [GTK] Bring Harfbuzz-ng support to Gtk
        https://bugs.webkit.org/show_bug.cgi?id=92098

        Reviewed by Gustavo Noronha Silva.

        Add HarfBuzz dependency.

        * GNUmakefile.am: Add FreeType/HarfBuzz CFLAGS to the library.

2012-12-05  Arnaud Renevier  <a.renevier@sisa.samsung.com>

        [Gtk] navigator.plugins contains too many plugin entries. First one are garbages
        https://bugs.webkit.org/show_bug.cgi?id=102438

        Reviewed by Xan Lopez.

        In getPluginInfo, outPlugins is resized to plugins.size and then,
        plugins are appended to it. So at the end, outPlugins will be twice
        too large, and first half will contain null objects. As outPlugins
        size is 0 when calling getPluginInfo, we don't need to resize it.

        * WebCoreSupport/PlatformStrategiesGtk.cpp:
        (PlatformStrategiesGtk::getPluginInfo):

2012-12-04  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Avoid unnecessary heap allocations during drag and drop operations
        https://bugs.webkit.org/show_bug.cgi?id=87938

        Reviewed by Martin Robinson.

        * webkit/webkitwebview.cpp:
        (webkit_web_view_drag_motion): Create DragData for the given
        DataObjectGtk in the stack.
        (webkit_web_view_drag_data_received): Ditto.
        (webkit_web_view_drag_drop): Ditto.

2012-12-02  Mike West  <mkwst@chromium.org>

        [gtk] Enable the CSP_NEXT runtime flag.
        https://bugs.webkit.org/show_bug.cgi?id=103810

        Reviewed by Adam Barth.

        This patch adds methods to DumpRenderTreeSupport in order to ensure that