@@ -1,3 +1,13 @@
+2012-12-11  Martin Robinson  <mrobinson@igalia.com>
+
+        [Coverity] [GTK] Remove some redundant null checks in DumpRenderTree
+        https://bugs.webkit.org/show_bug.cgi?id=104570
+
+        Reviewed by Daniel Bates.
+
+        * DumpRenderTree/gtk/DumpRenderTree.cpp:
+        (descriptionSuitableForTestResult): Remove a redundant null check.
+
 2012-12-11  Alberto Garcia  <agarcia@igalia.com>
 
         Remove unused GErrors
